# Homeworke_20.1

./: .env.sample  .gitignore  catalog_data.json  pyproject.toml  readme.md
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_articles_is_published.py  0003_alter_articles_is_published.py
blog/templates/blog/: articles_confirm_delete.html  articles_detail.html  articles_form.html  articles_list.html  delete_not_is_published.html  not_is_published.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_price_and_more.py  0003_version.py  0004_alter_version_version_number.py  0005_product_who_added.py
catalog/templates/catalog/: base.html  contacts.html  home.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_catalog_menu.html
config/: settings.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_country.py  0003_user_token.py
users/templates/users/: login.html  password_recovery.html  register.html  user_form.html
