[tool.poetry]
name = "homework20-1"
version = "0.1.0"
description = ""
authors = ["Alexandr Sinev <sir.sineow@yandex.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
ipython = "^8.23.0"
pytils = "^0.4.1"
django = "4.2"
redis = "^5.0.5"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
